# bazel-rust-reproducible-prost

./: .bazelrc  .gitignore  Cargo.toml  MODULE.bazel
build_tools/prost_toolchain/: BUILD.bazel
protos/example/: BUILD.bazel  Cargo.toml  build.rs  greeting.proto
protos/example/src/: lib.rs
services/hello_world_grpc_rust/server/: BUILD.bazel  Cargo.toml
services/hello_world_grpc_rust/server/src/: main.rs  server.rs  shutdown_utils.rs
