"Bazel dependencies"

module(name = "cloud_repo")

bazel_dep(name = "aspect_bazel_lib", version = "2.7.9")
bazel_dep(name = "aspect_rules_lint", version = "0.21.0")
bazel_dep(name = "aspect_rules_py", version = "0.7.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "buildifier_prebuilt", version = "6.4.0")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_multirun", version = "0.9.0")
bazel_dep(name = "rules_multitool", version = "0.4.0")
bazel_dep(name = "rules_nodejs", version = "6.1.0")
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_python", version = "0.32.0")
bazel_dep(name = "rules_rust", version = "0.50.1")
bazel_dep(name = "rules_shellcheck", version = "0.3.3")
bazel_dep(name = "rules_proto", version = "6.0.2")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_uv", version = "0.12.0")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.38.0", repo_name = "bazel_gazelle")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0-alpha2")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.0-alpha2")
bazel_dep(name = "rules_proto_grpc_go", version = "5.0.0-alpha2")
bazel_dep(name = "protobuf", version = "21.7")
bazel_dep(name = "hermetic_cc_toolchain", version = "3.1.0")
bazel_dep(name = "circl", version = "1.3.8")
bazel_dep(name = "rules_distroless", version = "0.3.3")
bazel_dep(name = "toolchains_protoc", version = "0.3.3")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")
register_toolchains("@rules_rust//proto/protobuf:default-proto-toolchain")
register_toolchains("@//build_tools/prost_toolchain")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//protos/example:Cargo.toml",
        "//services/hello_world_grpc_rust/server:Cargo.toml",
        # For each new rust package, add its Cargo.toml path here. Also add it to the `members` list in the root Cargo.toml
    ],
)
crate.annotation(
    crate = "protoc-gen-prost",
    gen_binaries = ["protoc-gen-prost"],
)
crate.annotation(
    crate = "protoc-gen-tonic",
    gen_binaries = ["protoc-gen-tonic"],
)
use_repo(crate, "crates")
