load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rust//proto/prost:defs.bzl", "rust_prost_library")

proto_library(
    name = "greeting_proto",
    srcs = ["greeting.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@protobuf//:timestamp_proto",
    ],
)

rust_prost_library(
    name = "greeting_rust_proto_library",
    proto = ":greeting_proto",
    visibility = ["//visibility:public"],
)
