[package]
name = "example_proto_bindings"
version = "0.1.0"
edition= "2021"


[lib]
name = "example_proto_bindings"
path = "src/lib.rs"


[dependencies]
prost = { version = "0.12.6" }
tonic = { version = "0.11.0", features = ["transport"] }
protoc-gen-tonic = { version = "0.4.1"} # force inclusion in Cargo.lock
protoc-gen-prost = { version = "0.4.0"} # force inclusion in Cargo.lock

[build-dependencies]
tonic-build = "0.11.0"