[package]
name = "example_proto_bindings"
version = "0.1.0"
edition= "2021"


[lib]
name = "example_proto_bindings"
path = "src/lib.rs"


[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
protoc-gen-tonic = { workspace = true }
protoc-gen-prost = { workspace = true } # force inclusion in Cargo.lock
prost-types = { workspace = true }

[build-dependencies]
tonic-build =  { workspace = true }